commit to value parsed pointer data for create ui, sub setters and checkbox values allow further depth searching for setting historic type data if needed (not reliant on the current dataset or select but instead saving the value it points to, allowing a hop jump or skip around the dynamic part of a chain), introducting a minor bug but i need a break, bug included in next read me

--- a/main.css
+++ b/main.css
@@ -215,6 +215,15 @@ html, body {
 	cursor: pointer;
 }
 
+.variable_input_path_only_depth_value {
+	display: inline-block;
+  width: 40px;
+  height: 16px;
+  font-size: 12px;
+  margin: 0 0 0 10px;
+  padding: 0px 8px;
+}
+
 .forcing_path_indicator {
 	background-color: #005b96 !important;
 }
